Fixed clipped cross on asset.

--- a/static/css/themes/kansha_flat/board.css
+++ b/static/css/themes/kansha_flat/board.css
@@ -355,7 +355,7 @@ a.card-label:hover {
 }
 
 #card-gallery .asset .delete {
-    left: -8px;
+    left: -4px;
 }
 
 #card-gallery .asset .cover {
